--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <header class="header">
             <a href="./index.html"><img class="headerLogo" src="./images/logo.png"></a>
             <h1 class="wow fadeInLeft">Fotografía Emanuel Bonardo</h1>
+            <h2>hola</h2>
         </header>
         <!-- MENU -->
         <!-- <nav class="menu">
