modifique pagina fotos y css

--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -70,13 +70,13 @@
         <!-- PRINCIPAL -->
         <main class="fotos">
             <div class="fotos1">
-                <img src="../images/fotos1.jpg" alt="NewYork1" width="500">
-                <p>New York</p>
+                <img class="primeraFoto" src="../images/fotos1.jpg" alt="NewYork1">
             </div>
+            <p>New York</p>
             <div class="fotos2">
                 <img src="../images/fotos2.jpg" alt="NewYork2" width="500">
-                <p>New York</p>
             </div>
+            <p>New York</p>
         </main>
         <!-- PUBLICIDAD -->
         <aside class="publicidadNikon1">
