modifique pag fotos y el css

--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -72,11 +72,17 @@
             <div class="fotos1">
                 <img class="primeraFoto" src="../images/fotos1.jpg" alt="NewYork1">
             </div>
-            <p>New York</p>
-            <div class="fotos2">
-                <img src="../images/fotos2.jpg" alt="NewYork2" width="500">
+            <div class="textoFoto1">
+                <h3 class="font-weight-light">New York</h3>
+                <h4 class="font-weight-light"><span>City</span></h4>
             </div>
-            <p>New York</p>
+            <div class="fotos2">
+                <img class="segundaFoto" src="../images/fotos2.jpg" alt="NewYork2">
+            </div>
+            <div class="textoFoto1">
+                <h3 class="font-weight-light">New York</h3>
+                <h4 class="font-weight-light"><span>City</span></h4>
+            </div>
         </main>
         <!-- PUBLICIDAD -->
         <aside class="publicidadNikon1">
