se agrego scss y modifico estilos css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Emanuel Bonardo">
     <!-- ICONO PESTAÑA -->
     <link rel="shorcut icon" href="./images/logonvo.jpg">
     <!-- LINK CDNJS -->
@@ -16,7 +17,7 @@
     <!-- LINK ANIMATE -->
     <link rel="stylesheet" href="css/animate.css">
     <!-- CSS -->
-    <link rel="stylesheet" href="./estilosema/estilos.css">
+    <link rel="stylesheet" href="./estilos/estilos.css">
     <title>Fotografía Emanuel Bonardo</title>
 </head>
 
