--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,7 +16,7 @@
     <!-- LINK ANIMATE -->
     <link rel="stylesheet" href="/css/animate.css">  
     <!-- CSS -->
-    <link rel="stylesheet" href="../estilosema/estilos.css">
+    <link rel="stylesheet" href="../estilos/estilos.css">
     <title>Fotografía Emanuel Bonardo</title>
 </head>
 
