--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -70,12 +70,18 @@
         <!-- PRINCIPAL -->
         <main class="fotos">
             <div class="fotos1">
-                <img src="../images/fotos1.jpg" alt="NewYork1" width="500">
-                <p>New York</p>
+                <img class="primeraFoto" src="../images/fotos1.jpg" alt="NewYork1">
+            </div>
+            <div class="textoFoto1">
+                <h3 class="font-weight-light">New York</h3>
+                <h4 class="font-weight-light"><span>City</span></h4>
             </div>
             <div class="fotos2">
-                <img src="../images/fotos2.jpg" alt="NewYork2" width="500">
-                <p>New York</p>
+                <img class="segundaFoto" src="../images/fotos2.jpg" alt="NewYork2">
+            </div>
+            <div class="textoFoto1">
+                <h3 class="font-weight-light">New York</h3>
+                <h4 class="font-weight-light"><span>City</span></h4>
             </div>
         </main>
         <!-- PUBLICIDAD -->
