--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav> -->
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
             <!-- Brand -->
-            <a class="navbar-brand" href="#">Navegador</a>
+            <a class="navbar-brand" href="#"></a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -48,13 +48,22 @@
             </button>
 
             <!-- Navbar links -->
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="./index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./pages/fotos.html">Fotos</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            Ciudades
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Córdoba</a>
+                            <a class="dropdown-item" href="#">Buenos Aires</a>
+                        </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./pages/tienda.html">Tienda</a>
@@ -77,8 +86,9 @@
         </main>
         <main class="masFotos">
             <h1>Nikon Argentina</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, aliquid consectetur? Obcaecati
-                provident debitis odio beatae, facilis consequuntur quas eum!</p>
+            <p>La actual Nikon Corporation fue fundada el 25 de julio de 1917 por la fusión de tres pequeñas firmas de
+                óptica: Iwaki Glass Seisaku-sho, Fujii Lens Seizo-sho, y la división óptica de Tokyo Keiki Seisaku-sho.
+                La primera de estas empresas operaba desde 1881.</p>
             <a href="https://www.nikon.com.ar/"><button id="nikonBoton"><b>Ir a Nikon Argentina Oficial</b></button></a>
             <!-- <a href="./pages/fotos.html">Ver más</a> -->
         </main>
@@ -111,10 +121,10 @@
         integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
         crossorigin="anonymous"></script>
     <!-- LINK JS -->
-        <script src="js/wow.min.js"></script>
-        <script>
+    <script src="js/wow.min.js"></script>
+    <script>
         new WOW().init();
-        </script>
+    </script>
 </body>
 
 </html>
