--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -38,7 +38,7 @@
     </nav> -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">Navegador</a>
+        <a class="navbar-brand" href="#"></a>
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -46,13 +46,22 @@
         </button>
 
         <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../pages/fotos.html">Fotos</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                        Ciudades
+                    </a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Córdoba</a>
+                        <a class="dropdown-item" href="#">Buenos Aires</a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../pages/tienda.html">Tienda</a>
