--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <!-- LINK ANIMATE -->
-    <link rel="stylesheet" href="/css/animate.css">   
+    <link rel="stylesheet" href="/css/animate.css">
     <!-- CSS -->
     <link rel="stylesheet" href="../estilos/estilos.css">
     <title>Fotografía Emanuel Bonardo</title>
@@ -38,7 +38,7 @@
     </nav> -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">Navegador</a>
+        <a class="navbar-brand" href="#"></a>
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -46,13 +46,22 @@
         </button>
 
         <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../pages/fotos.html">Fotos</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                        Ciudades
+                    </a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Córdoba</a>
+                        <a class="dropdown-item" href="#">Buenos Aires</a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../pages/tienda.html">Tienda</a>
@@ -139,10 +148,10 @@
         integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
         crossorigin="anonymous"></script>
     <!-- LINK JS -->
-        <script src="/js/wow.min.js"></script>
-        <script>
+    <script src="/js/wow.min.js"></script>
+    <script>
         new WOW().init();
-        </script>
+    </script>
 </body>
 
 </html>
