modificaciones a las paginas y el scss

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Emanuel Bonardo">
+    <!-- KEYWORDS -->
+    <meta name="description" content="fotografo profesional">
+    <meta name="keywords" content="fotografo profesional fotografia books eventos">
     <!-- ICONO PESTAÑA -->
     <link rel="shorcut icon" href="./images/logonvo.jpg">
     <!-- LINK CDNJS -->
