--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Emanuel Bonardo">
+    <!-- KEYWORDS -->
+    <meta name="description" content="fotografo profesional">
+    <meta name="keywords" content="fotografo profesional fotografia books eventos">
     <!-- ICONO PESTAÑA -->
     <link rel="shorcut icon" href="../images/logonvo.jpg">
     <!-- LINK CDNJS -->
@@ -17,7 +21,7 @@
     <link rel="stylesheet" href="/css/animate.css">
     <!-- CSS -->
     <link rel="stylesheet" href="../estilos/estilos.css">
-    <title>Fotografía Emanuel Bonardo</title>
+    <title>Tienda Emanuel Bonardo</title>
 </head>
 
 <body class="fondoGeneral">
