se modifico paginas y scss

--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -96,6 +96,20 @@
                 <h3 class="font-weight-light">New York</h3>
                 <h4 class="font-weight-light"><span>City</span></h4>
             </div>
+            <div class="fotos3">
+                <img class="tercerFoto" src="../images/fotos3.jpg" alt="NewYork3">
+            </div>
+            <div class="textoFoto1">
+                <h3 class="font-weight-light">New York</h3>
+                <h4 class="font-weight-light"><span>City</span></h4>
+            </div>
+            <div class="fotos4">
+                <img class="cuartaFoto" src="../images/fotos4.jpg" alt="NewYork4">
+            </div>
+            <div class="textoFoto1">
+                <h3 class="font-weight-light">New York</h3>
+                <h4 class="font-weight-light"><span>City</span></h4>
+            </div>
         </main>
         <!-- PUBLICIDAD -->
         <aside class="publicidadNikon1">
