se modifico algunas paginas y el scss

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -18,20 +18,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <!-- LINK ANIMATE -->
-    <link rel="stylesheet" href="/css/animate.css">    
+    <link rel="stylesheet" href="/css/animate.css">
     <!-- CSS -->
     <link rel="stylesheet" href="../estilos/estilos.css">
     <title>Sobre Mi Emanuel Bonardo</title>
 </head>
 
 <body class="fondoGeneral">
-    <!-- CABECERA -->
-    <header class="header">
-        <a href="../index.html"><img class="headerLogo" src="../images/logo.png"></a>
-        <h1 class="wow fadeInLeft">Fotografía Emanuel Bonardo</h1>
-    </header>
-    <!-- MENU -->
-    <!-- <nav class="menu">
+    <div id="grilla4">
+        <!-- CABECERA -->
+        <header class="header">
+            <a href="../index.html"><img class="headerLogo" src="../images/logo.png"></a>
+            <h1 class="wow fadeInLeft">Fotografía Emanuel Bonardo</h1>
+        </header>
+        <!-- MENU -->
+        <!-- <nav class="menu">
         <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="../pages/fotos.html">Fotos</a></li>
@@ -40,64 +41,63 @@
             <li><a href="../pages/contacto.html">Contacto</a></li>
         </ul>
     </nav> -->
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <!-- Brand -->
-        <a class="navbar-brand" href="#"></a>
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+            <!-- Brand -->
+            <a class="navbar-brand" href="#"></a>
 
-        <!-- Toggler/collapsibe Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            <!-- Toggler/collapsibe Button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <!-- Navbar links -->
-        <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/fotos.html">Fotos</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                        Ciudades
-                    </a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Córdoba</a>
-                        <a class="dropdown-item" href="#">Buenos Aires</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/tienda.html">Tienda</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/sobremi.html">Sobre Mi</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <!-- PRINCIPAL -->
-    <main class="fondoSobreMi">
-        <div class="descripcion">
-            <h2>Sobre Mi</h2>
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/fotos.html">Fotos</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            Ciudades
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Córdoba</a>
+                            <a class="dropdown-item" href="#">Buenos Aires</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/tienda.html">Tienda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/sobremi.html">Sobre Mi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!-- PRINCIPAL -->
+        <main class="descripcion">
+            <h1>Sobre Mi</h1>
             <p>Soy un apasionado por la fotografía general. Soy de Córdoba, Argentina.</p>
-        </div>
-        <div class="principalSobreMi">
-            <img src="../images/sobremifoto1.jpg" alt="SobreMifoto1" width="300">
-            <img src="../images/sobremifoto2.jpg" alt="SobreMifoto2" width="300">
-        </div>
-    </main>
-    <!-- PIE DE PAGINA -->
-    <footer class="pieDePagina">
-        <p class="pieDePaginaDerechos">©2022 por Emanuel Bonardo. Fotógrafo Argentino</p>
-        <div class="redesSociales">
-            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-        </div>
-    </footer>
+        </main>
+        <section class="principalSobreMi">
+            <img class="fotoSobreMi1" src="../images/sobremifoto1.jpg" alt="SobreMifoto1">
+            <img class="fotoSobreMi2" src="../images/sobremifoto2.jpg" alt="SobreMifoto2">
+        </section>
+        <!-- PIE DE PAGINA -->
+        <footer class="pieDePagina">
+            <p class="pieDePaginaDerechos">©2022 por Emanuel Bonardo. Fotógrafo Argentino</p>
+            <div class="redesSociales">
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+        </footer>
+    </div>
     <!-- ICONO WHATSAPP -->
     <div class="icono"><a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></div></a>
     <!-- LINK BOOTSTRAP -->
@@ -111,10 +111,10 @@
         integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
         crossorigin="anonymous"></script>
     <!-- LINK JS -->
-        <script src="/js/wow.min.js"></script>
-        <script>
+    <script src="/js/wow.min.js"></script>
+    <script>
         new WOW().init();
-        </script>
+    </script>
 </body>
 
 </html>
