modificacion de paginas y scss

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -91,7 +91,7 @@
         <!-- UBICACION -->
         <section class="principalContacto2">
             <h2>Ubicación</h2>
-            <iframe
+            <iframe class="mapa"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d108977.0603892044!2d-64.26438435500386!3d-31.39943416227947!2m3!1f0!2f0!3f0!
             3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432985f478f5b69%3A0xb0a24f9a5366b092!2sC%C3%B3rdoba%2C%20Argentina!5e0!3m2!1ses-419!2sus!4v1659902972896!5m2!1ses-419!2sus"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
@@ -138,6 +138,13 @@
                 </fieldset>
             </form>
         </section>
+        <!-- PUBLICIDAD -->
+        <aside class="publicidadNikon1">
+            <iframe class="videoNikon" width="660" height="515" src="https://www.youtube.com/embed/akZZkw8d5a4"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </aside>
         <!-- PIE DE PAGINA -->
         <footer class="pieDePagina">
             <p class="pieDePaginaDerechos">©2022 por Emanuel Bonardo. Fotógrafo Argentino</p>
