--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -25,13 +25,14 @@
 </head>
 
 <body class="fondoGeneral">
-    <!-- CABECERA -->
-    <header class="header">
-        <a href="../index.html"><img class="headerLogo" src="../images/logo.png"></a>
-        <h1 class="wow fadeInLeft">Fotografía Emanuel Bonardo</h1>
-    </header>
-    <!-- MENU -->
-    <!-- <nav class="menu">
+    <div id="grilla3">
+        <!-- CABECERA -->
+        <header class="header">
+            <a href="../index.html"><img class="headerLogo" src="../images/logo.png"></a>
+            <h1 class="wow fadeInLeft">Fotografía Emanuel Bonardo</h1>
+        </header>
+        <!-- MENU -->
+        <!-- <nav class="menu">
         <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="../pages/fotos.html">Fotos</a></li>
@@ -40,50 +41,49 @@
             <li><a href="../pages/contacto.html">Contacto</a></li>
         </ul>
     </nav> -->
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <!-- Brand -->
-        <a class="navbar-brand" href="#"></a>
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+            <!-- Brand -->
+            <a class="navbar-brand" href="#"></a>
 
-        <!-- Toggler/collapsibe Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            <!-- Toggler/collapsibe Button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <!-- Navbar links -->
-        <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/fotos.html">Fotos</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                        Ciudades
-                    </a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Córdoba</a>
-                        <a class="dropdown-item" href="#">Buenos Aires</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/tienda.html">Tienda</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/sobremi.html">Sobre Mi</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <!-- PRINCIPAL -->
-    <main Class="PrincipalTienda">
-        <section Class="sectionTienda1">
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/fotos.html">Fotos</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            Ciudades
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Córdoba</a>
+                            <a class="dropdown-item" href="#">Buenos Aires</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/tienda.html">Tienda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/sobremi.html">Sobre Mi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!-- PRINCIPAL -->
+        <section class="sectionTienda1">
             <img src="../images/tiendafoto1.jpg" alt="TiendaFoto1" width="300">
-            <h2>Buenos Aires</h2>
+            <h2>Opcion 1</h2>
             <table Border="02px" cellpadding="10px" cellspacing="10px">
                 <tr>
                     <th>FOTO</th>
@@ -98,9 +98,9 @@
                 </tr>
             </table>
         </section>
-        <section Class="sectionTienda2">
+        <section class="sectionTienda2">
             <img src="../images/tiendafoto1.jpg" alt="TiendaFoto1" width="500">
-            <h2>Buenos Aires</h2>
+            <h2>Opcion 2</h2>
             <table Border="02px" cellpadding="10px" cellspacing="10px">
                 <tr>
                     <th>FOTO</th>
@@ -114,9 +114,9 @@
                 </tr>
             </table>
         </section>
-        <section Class="sectionTienda3">
+        <section class="sectionTienda3">
             <img src="../images/tiendafoto1.jpg" alt="TiendaFoto1" width="700">
-            <h2>Buenos Aires</h2>
+            <h2>Opcion 3</h2>
             <table Border="02px" cellpadding="10px" cellspacing="10px">
                 <tr>
                     <th>FOTO</th>
@@ -130,15 +130,15 @@
                 </tr>
             </table>
         </section>
-    </main>
-    <!-- PIE DE PAGINA -->
-    <footer class="pieDePagina">
-        <p class="pieDePaginaDerechos">©2022 por Emanuel Bonardo. Fotógrafo Argentino</p>
-        <div class="redesSociales">
-            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-        </div>
-    </footer>
+        <!-- PIE DE PAGINA -->
+        <footer class="pieDePagina">
+            <p class="pieDePaginaDerechos">©2022 por Emanuel Bonardo. Fotógrafo Argentino</p>
+            <div class="redesSociales">
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+        </footer>
+    </div>
     <!-- ICONO WHATSAPP -->
     <div class="icono"><a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></div></a>
     <!-- LINK BOOTSTRAP -->
