--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -66,6 +66,7 @@
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="#">Córdoba</a>
                             <a class="dropdown-item" href="#">Buenos Aires</a>
+                            <a class="dropdown-item" href="#">Mendoza</a>
                         </div>
                     </li>
                     <li class="nav-item">
